--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh; 
-    background-color: #55e955; 
+    background: linear-gradient(rgb(55, 112, 218),rgb(5, 165, 58), rgb(6, 102, 45));
     margin: 0;
   }
   
@@ -32,9 +32,9 @@ body {
     position: relative;
     bottom: 0;
     text-align: center; /* Centra el texto */
-    color: rgb(0, 0, 0); /* Texto blanco */
+    color: rgb(255, 255, 255); /* Texto blanco */
     width: 100%;
-    background-color: #55e955 !important; /* Verde lima */
+    background-color: #0a750a !important; /* Verde lima */
     margin: 0;
   }
   
