--- a/styles.css
+++ b/styles.css
@@ -37,4 +37,17 @@ body {
     background-color: #0a750a !important; /* Verde lima */
     margin: 0;
   }
+  .titulo {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    margin-top: 20px;
+}
+.titulo h1 {
+    font-size: 2.5em;
+    color: #333;
+}
+.titulo h2 {
+    font-size: 1.5em;
+    color: #faf4f4;
+}
   
