--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   
   footer {
     padding: 10px;
-    position: relative;
+    position: fixed;
     bottom: 0;
     text-align: center; /* Centra el texto */
     color: rgb(255, 255, 255); /* Texto blanco */
