--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,10 @@ body {
   
   footer {
     padding: 10px;
-    position: absolute;
-    bottom: 0;
-    text-align: center; /* Centra el texto */
-    color: rgb(255, 255, 255); /* Texto blanco */
+    text-align: center;
+    color: white;
     width: 100%;
-    background-color: #0a750a !important; /* Verde lima */
-    margin: 0;
+    background-color: #0a750a !important;
   }
   .titulo {
     text-align: center;
